# NokiaAcademy

Weekend4/: CMakeLists.txt
Weekend4/CppExtensions/: CMakeLists.txt  slide50.cpp  slide60.cpp
Weekend4/StlAdvanced/: CMakeLists.txt  main.cpp  slide73.cpp  slide75.cpp  slide84.cpp  slide90.cpp
engine/: Engine.cpp
engine/framework/source/: TimerManager.cpp
engine/public/: ILogger.hpp
exercise01/engine/public/: IService.hpp
exercise01/solution/: MainProgram.cpp  MainProgram.hpp
exercise01/tests/solution/: AcceptanceTestsExitMessage.cpp  BasicMainProgramTestSuite.hpp  MessageSenderMock.hpp
exercise01_solution/engine/public/: IOutgoingConnection.hpp
exercise01_solution/solution/: MainProgram.cpp
exercise01_solution/tests/engine/: ModuleTestConfig.hpp
exercise01_solution/tests/solution/: MessageFactoryFunctions.cpp
exercise02/engine/framework/: CMakeLists.txt
exercise02/engine/framework/include/: MessageSender.hpp
exercise02/engine/framework/source/: MeetingRoom.cpp  MessageTypes.cpp
exercise02/solution/: MainProgram.cpp  MainProgram.hpp
exercise02/tests/: CMakeLists.txt
exercise02/tests/solution/: AcceptanceTestsUserInputMessage.cpp  BasicMainProgramTestSuite.hpp  MessageFactoryFunctions.hpp
exercise02_solution/engine/public/: IInternalMessageSender.hpp
exercise02_solution/solution/: MainProgram.cpp  MainProgram.hpp
exercise02_solution/tests/solution/: MessageFactoryFunctions.cpp
exercise03/: CMakeLists.txt
exercise03/solution/: MainProgram.cpp
exercise03/tests/solution/: AcceptanceTestsReceiveIncomingMessage.cpp  AcceptanceTestsUserInputMessage.cpp  UserOutputMock.hpp
exercise03_solution/solution/: MainProgram.cpp
exercise03_solution/tests/: GlobalTestConfig.hpp
exercise03_solution/tests/solution/: BasicMainProgramTestSuite.hpp
exercise04/solution/: MainProgram.cpp  MainProgram.hpp
exercise04_solution/: main.cpp
exercise04_solution/solution/: MainProgram.cpp  MainProgram.hpp  Messages.hpp
exercise05/solution/: MainProgram.cpp  MainProgram.hpp
exercise06/solution/: MainProgram.cpp  Messages.hpp
exercise07/: README.md  contributors.txt
exercise07/solution/: MainProgram.cpp  MainProgram.hpp  UserHistory.cpp  UserHistory.hpp
exercise08/communicator/: main.cpp
exercise08/communicator/engine/: CMakeLists.txt
exercise08/communicator/engine/framework/include/: InternalQueue.hpp
exercise08_solution/solution/: CMakeLists.txt  Commands.cpp  MainProgram.cpp  UserHistory.cpp  UserHistory.hpp
exercise09/: main.cpp
exercise09/engine/gui/: CMakeLists.txt
exercise09/engine/gui/source/: Dispatcher.cpp
exercise09/solution/: Commands.cpp  Commands.hpp  MainProgram.cpp  Messages.hpp
exercise10/: CMakeLists.txt  main.cpp
exercise10/engine/framework/include/: IncomingConnection.hpp  OutgoingConnection.hpp
exercise10/engine/public/: IServiceRunner.hpp  Identity.hpp
exercise10/solution/: Commands.cpp  DataHolder.hpp  MainProgram.cpp
exercise10/tests/solution/: AcceptanceTestsHistory.cpp  AcceptanceTestsNewMessageArrivalNotification.cpp  AcceptanceTestsRecipientsList.cpp  AcceptanceTestsSingleRecipient.cpp  AcceptanceTestsUserInputMessage.cpp  MessageFactoryFunctions.hpp
exercise11/solution/: Commands.cpp  DataHolder.hpp  MainProgram.hpp  UserHistory.hpp
exercise11/tests/: CMakeLists.txt
solution/: MainProgram.cpp
tests/solution/: MessageFactoryFunctions.cpp  MessageFactoryFunctions.hpp
(+60 files in other folders)
